# PromptRefineLab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train_manzai_apo.py
docs/: CONTRIBUTING.md  ENVIRONMENT.md  PLAN.md  ROADMAP.md  SKILL_SPEC.md
docs/examples/: run.yaml
inputs/: candidates.json  outputs.json  prompt_before.txt  tasks.json
outputs/latest/: leaderboard.json  report.md  results.json
scripts/: e2e_inputs_test.py  e2e_ollama_test.py  install_skill.sh  package_skill.sh
skills/promptrefinelab/: SKILL.md
skills/promptrefinelab/references/: install.md  run-spec.md
skills/promptrefinelab/scripts/: run_prl.py
src/prl/: cli.py  evaluators.py  io.py  llm_clients.py  models.py  skill.py  spec.py
tests/: test_evaluators.py  test_io.py  test_skill.py
